--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="one">
       <div id="ole">
     <h2 id="test">Test Image-</h2>
-    <img src="https://m.media-amazon.com/images/I/51Cb8y2hJdL._SL1500_.jpg" height="300px" width="300px" id="imn" class="responsive">
+    <img src="waterbottel.jpg" height="300px" width="300px" id="imn" class="responsive">
     <p id="model">Model On Microsoft Azure-</p>
     <p id="model">Model On Mobile Net-</p>
     <p id="model">Result-</p>
@@ -33,7 +33,7 @@
  
   <div class="one">
     <h2 id="test">Test Image-</h2>
-    <img src="https://image.shutterstock.com/image-photo/pair-pink-sport-shoes-on-260nw-228691018.jpg" height="300px" width="300px"id="one" class="responsive">
+    <img src="shoes.webp" height="300px" width="300px"id="one" class="responsive">
     <p id="model">Model On Microsoft Azure-</p>
     <p id="model">Model On Mobile Net-</p>
     <p id="model">Result-</p>
@@ -41,7 +41,7 @@
   </div>
   <div class="one">
     <h2 id="test">Test Image-</h2>
-    <img src="https://m.media-amazon.com/images/I/71A60UaCRUL._SL1500_.jpg" height="300px" width="300px"id="one" class="responsive">
+    <img src="headphone.jpg" height="300px" width="300px"id="one" class="responsive">
     <p id="model">Model On Microsoft Azure-</p>
     <p id="model">Model On Mobile Net-</p>
     <p id="model">Result-</p>
@@ -50,7 +50,7 @@
   <ol>
   <div class="one">
     <h2 id="test">Test Image-</h2>
-    <img src="https://i.pinimg.com/originals/7f/cb/0c/7fcb0c8406a79ae656616dfe86d4629c.jpg" height="300px" width="300px"id="one" class="responsive">
+    <img src="bird.jpg" height="300px" width="300px"id="one" class="responsive">
     <p id="model">Model On Microsoft Azure-</p>
     <p id="model">Model On Mobile Net-</p>
     <p id="model">Result-</p>
@@ -58,12 +58,52 @@
     </div>
     <div class="one">
       <h2 id="test">Test Image-</h2>
-      <img src="https://media.istockphoto.com/photos/showing-mess-in-a-teenage-girls-bedroom-including-foodclothes-and-picture-id958511872?k=6&m=958511872&s=612x612&w=0&h=H8Qr8vjbk1PFRYgWW5p1v71iYFOxCPXPJuJeYe8dJFw=" height="300px" width="300px"id="one" class="responsive">
+      <img src="th.jpg" height="300px" width="300px"id="one" class="responsive">
       <p id="model">Model On Microsoft Azure-</p>
       <p id="model">Model On Mobile Net-</p>
       <p id="model">Result-</p>
       <p>Mobile Net Is more accurate</p>
       </div>
+      <div class="one">
+        <h2 id="test">Test Image-</h2>
+        <img src="phone.jpg" height="300px" width="300px"id="one" class="responsive">
+        <p id="model">Model On Microsoft Azure-</p>
+        <p id="model">Model On Mobile Net-</p>
+        <p id="model">Result-</p>
+        <p>Mobile Net Is more accurate</p>
+        </div>
+        <div class="one">
+          <h2 id="test">Test Image-</h2>
+          <img src="laptop.jpg" height="300px" width="300px"id="one" class="responsive">
+          <p id="model">Model On Microsoft Azure-</p>
+          <p id="model">Model On Mobile Net-</p>
+          <p id="model">Result-</p>
+          <p>Mobile Net Is more accurate</p>
+          </div>
+          <div class="one">
+            <h2 id="test">Test Image-</h2>
+            <img src="perfium.jpg" height="300px" width="300px"id="one" class="responsive">
+            <p id="model">Model On Microsoft Azure-</p>
+            <p id="model">Model On Mobile Net-</p>
+            <p id="model">Result-</p>
+            <p>Mobile Net Is more accurate</p>
+            </div>
+            <div class="one">
+              <h2 id="test">Test Image-</h2>
+              <img src="bed.jpg" height="300px" width="300px"id="one" class="responsive">
+              <p id="model">Model On Microsoft Azure-</p>
+              <p id="model">Model On Mobile Net-</p>
+              <p id="model">Result-</p>
+              <p>Mobile Net Is more accurate</p>
+              </div>
+              <div class="one">
+                <h2 id="test">Test Image-</h2>
+                <img src="bat.jpg" height="300px" width="300px"id="one" class="responsive">
+                <p id="model">Model On Microsoft Azure-</p>
+                <p id="model">Model On Mobile Net-</p>
+                <p id="model">Result-</p>
+                <p>Mobile Net Is more accurate</p>
+                </div>
     </center>
 </ol>
   
